# hshort

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  builder.dockerfile  docker-compose.yml  docker-run  hshort.cabal  image.dockerfile  stack.yaml  tutum.yaml
src/: Main.hs
src/Controllers/: Home.hs  Urls.hs
src/Views/: Home.hs  Util.hs
static/: index.html  script.js  style.css
templates/urls/: view.html
