name: hshort
version: 0.1.0.0
synopsis: A canonical URL shortener written using Scotty.
homepage: https://github.com/yamadapc/hshort
license: MIT
license-file: LICENSE
author: Pedro Tacla Yamada
maintainer: tacla.yamada@gmail.com
copyright: (c) 2014 Pedro Tacla Yamada
category: Web
build-type: Simple
cabal-version: >=1.10

executable hshort
  main-is: Main.hs
  build-depends: base >=4.7 && <5,
                 bytestring >=0.10 && <0.11,
                 deepseq >=1.3 && <1.5,
                 hastache >=0.6 && <1.0,
                 hedis >=0.6 && <0.7,
                 http-types >=0.8 && <0.9,
                 network >=2.4 && <2.7,
                 random >=1.0 && <1.1,
                 scotty >=0.9 && <0.10,
                 scotty-hastache >=0.2 && <0.3,
                 text >=1.1 && <1.2,
                 transformers >=0.3 && <0.5,
                 wai >=3.0 && <3.1,
                 wai-middleware-static >=0.6 && <0.7
  hs-source-dirs: src
  default-language: Haskell2010

test-suite hshort-spec
  buildable: True
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language: Haskell2010
  hs-source-dirs: src test
  build-depends: base >=4.7 && <5,
                 hspec >=2.0 && <2.1,

                 bytestring,
                 deepseq,
                 hastache,
                 hedis,
                 http-types,
                 network,
                 random,
                 scotty,
                 scotty-hastache,
                 text,
                 transformers,
                 wai,
                 wai-middleware-static
